# scr

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  fileloader.rs  lib.rs  scraping.rs
src/loading/: mod.rs  ways.rs
src/prelude/: mod.rs
src/prelude/loading/: mod.rs
src/prelude/loading/file/: load.rs  mod.rs
src/prelude/parsing/: create.rs  mod.rs
src/scraping/: mod.rs  ways.rs
