[package]
name = "scr"
version = "0.2.0"
edition = "2021"
authors = ["onekg <1kg.coop@gmail.com>"]
license = "MIT"
homepage = "https://onekg.dev"
repository = "https://github.com/1kawdalg/scr"
description = """
Simple site parser and file loader
"""

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.17.1"
