[package]
name = "scr"
version = "1.0.1"
edition = "2021"
authors = ["onekg <1kg.coop@gmail.com>"]
license = "MIT"
repository = "https://github.com/1kawdalg/scr"
documentation = "https://docs.rs/scr/latest/scr/"
description = "Most simple site parser and file loader"

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.17.1"
